--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certifications</a></li>
             </ul>
         </div>
     </nav>
@@ -59,7 +59,7 @@
                 <div class="social-icons">
                     <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                    <a class="social-icon" href="#!"><i class="fab fa-youtube"></i></a>
                     <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
@@ -71,14 +71,14 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">English and family and consumer science teacher</h3>
+                        <h3 class="mb-0">English, Family and Consumer Science, Guest Teacher</h3>
                         <div class="subheading mb-3">St Vrain Valley School District</div>
                         <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of
                             the day, going forward, a new normal that has evolved from generation X is on the runway
                             heading towards a streamlined cloud solution. User generated content in real-time will have
                             multiple touchpoints for offshoring.</p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">October 2021 - Present</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
