--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Savanna Poulson</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <!--Custom Icon-->
+    <link rel="icon" type="image/x-icon" href="Assets/IMG/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
