--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>Savanna Poulson</title>
     <!--Custom Icon-->
-    <link rel="icon" type="image/x-icon" href="Assets/IMG/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="Assets/IMG/favicon.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
