--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Savanna Poulson</title>
-    <!--Custom Icon-->
+    <!--Custom Icons-->
     <link rel="icon" type="image/x-icon" href="Assets/IMG/favicon.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -37,7 +37,8 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certifications</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#videos">Videos</a></li>
             </ul>
         </div>
     </nav>
@@ -74,49 +75,68 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">English, Family and Consumer Science, Guest Teacher</h3>
                         <div class="subheading mb-3">St Vrain Valley School District</div>
-                        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of
-                            the day, going forward, a new normal that has evolved from generation X is on the runway
-                            heading towards a streamlined cloud solution. User generated content in real-time will have
-                            multiple touchpoints for offshoring.</p>
+                        <p>
+                        <ul>
+                            <li>Instructed, tutored, and mentored whole class and individual students across grades 9-12.</li>
+                            <li>Fulfilled circulation duties using Follett Destiny to renew, check-in, check-out, and loan books.</li>
+                            <li>Facilitated literature circles to encourage reading stamina, enjoyment, and comprehension skills.</li>
+                            <li>Instructed students in researching techniques including accessing databases, utilizing boolean terms, and keywords.</li>
+                            <li>Completed shelving duties including fronting texts and shelf reading.</li>
+                            <li>Completed documentation of attendance, grades, and other required details.</li>
+                        </ul> </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">October 2021 - Present</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Web Developer</h3>
-                        <div class="subheading mb-3">Intelitec Solutions</div>
-                        <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.
-                            Override the digital divide with additional clickthroughs from DevOps. Nanotechnology
-                            immersion along the information highway will close the loop on focusing solely on the bottom
-                            line.</p>
+                        <h3 class="mb-0">Language Arts Teacher</h3>
+                        <div class="subheading mb-3">Angevine Middle School</div>
+                        <p>
+                        <ul>
+                        <li>Taught full time for standard/support facilitated, advanced, and pre-IB eighth grade language arts classes.</li> 
+                        <li>Maintained classroom library and records regarding checked out and returned books.</li>
+                        <li>Updated students’ individual learning and reading plans by collecting and analyzing data, communicating with parents and interventionists, and implementing learning and reading supports with data checks.</li>
+                        <li>Adapted teaching methods and materials to meet students' varying needs and cultural backgrounds.</li>
+                        </ul>
+                        </p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">December 2021 - May 2022</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Junior Web Designer</h3>
-                        <div class="subheading mb-3">Shout! Media Productions</div>
-                        <p>Podcasting operational change management inside of workflows to establish a framework. Taking
-                            seamless key performance indicators offline to maximise the long tail. Keeping your eye on
-                            the ball while performing a deep dive on the start-up mentality to derive convergence on
-                            cross-platform integration.</p>
+                        <h3 class="mb-0">Language Arts Teacherr</h3>
+                        <div class="subheading mb-3">LaunchED Virtual Academy</div>
+                        <p>
+                        <ul>
+                            <li>Taught full time for grade 7 mainstream and advanced Language Arts remotely.</li>
+                            <li>Lead technological professional development on online learning platform Nearpod.</li>
+                            <li>Curated and promoted a virtual classroom library to students aged 13-14.</li>
+                            <li>Utilized information management systems to organize and present class materials to students.</li>
+                            <li>Incorporated technology such as FlipGrid and Nearpod into lessons for scaffolding, collaboration, and enhancing student learning.</li>
+                        </ul>
+                        </p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">August 2020 - July 2021</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Web Design Intern</h3>
-                        <div class="subheading mb-3">Shout! Media Productions</div>
-                        <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically
-                            procrastinate B2C users after installed base benefits. Dramatically visualize customer
-                            directed convergence without revolutionary ROI.</p>
+                        <h3 class="mb-0">English Teacher</h3>
+                        <div class="subheading mb-3">Abraham Lincoln High School</div>
+                        <p>
+                        <ul>
+                            <li>Taught full time for grades 9-11th honors, mainstream, and co-taught English and English Language Development classes.</li>
+                            <li>Implemented the Sheltered Instruction Observational Protocal Model to help English Language Learner students develop their English skills.</li>
+                            <li>Co-created the ninth grade unit four unit curriculum for the 2019-2020 school year for the district.</li>
+                            <li>Collected and implemented student data to drive instruction.</li>
+                        </ul>
+                        </p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">August 2018 - July 2020</span></div>
                 </div>
             </div>
         </section>
         <hr class="m-0" />
-        <!-- Education-->
+        <!-- Education In Descending Order-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
                 <h2 class="mb-5">Education</h2>
