--- a/index.html
+++ b/index.html
@@ -58,16 +58,17 @@
                 <p class="lead mb-5">I am a seasoned educator who plans to take experiences learned from teaching to
                     provide effective, literacy-building services to children and young adults through public
                     libraries. </p>
+          <!--Replaced old icons with website building and YT icons-->
                 <div class="social-icons">
-                    <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon" href="#!"><i class="fab fa-drupal"></i></a>
                     <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="#!"><i class="fab fa-wordpress"></i></a>
                     <a class="social-icon" href="#!"><i class="fab fa-youtube"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </section>
         <hr class="m-0" />
-        <!-- Experience-->
+        <!--Professional Experience Reverse Chrono-->
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
                 <h2 class="mb-5">Experience</h2>
@@ -77,6 +78,7 @@
                         <div class="subheading mb-3">St Vrain Valley School District</div>
                         <p>
                         <ul>
+                            list-style-image: url: https://fontawesome.com/icons/book-open-reader?f=classic&s=solid
                             <li>Instructed, tutored, and mentored whole class and individual students across grades 9-12.</li>
                             <li>Fulfilled circulation duties using Follett Destiny to renew, check-in, check-out, and loan books.</li>
                             <li>Facilitated literature circles to encourage reading stamina, enjoyment, and comprehension skills.</li>
@@ -170,15 +172,7 @@
                     <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                     <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                     <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-less"></i></li>
                     <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                 </ul>
                 <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0">
@@ -215,10 +209,10 @@
             </div>
         </section>
         <hr class="m-0" />
-        <!-- Awards-->
+        <!-- Certifications-->
         <section class="resume-section" id="awards">
             <div class="resume-section-content">
-                <h2 class="mb-5">Awards & Certifications</h2>
+                <h2 class="mb-5">Certifications</h2>
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
@@ -261,6 +255,9 @@
                 </ul>
             </div>
         </section>
+        <section class="resume section" id="videos">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Videos</h2>
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
