--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <div class="subheading mb-3">St Vrain Valley School District</div>
                         <p>
                         <ul>
-                            list-style-image: url: https://fontawesome.com/icons/book-open-reader?f=classic&s=solid
+                            <list-style-image: url: https://fontawesome.com/icons/book-open-reader?f=classic&s=solid>
                             <li>Instructed, tutored, and mentored whole class and individual students across grades 9-12.</li>
                             <li>Fulfilled circulation duties using Follett Destiny to renew, check-in, check-out, and loan books.</li>
                             <li>Facilitated literature circles to encourage reading stamina, enjoyment, and comprehension skills.</li>
@@ -255,9 +255,9 @@
                 </ul>
             </div>
         </section>
-        <section class="resume section" id="videos">
-            <div class="resume-section-content">
-                <h2 class="mb-5">Videos</h2>
+            <section class="resume section" id="videos">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Videos</h2>
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
