--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/x-icon" href="Assets/IMG/favicon.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ccaeda6b58.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"
         type="text/css" />
@@ -77,14 +78,25 @@
                         <h3 class="mb-0">English, Family and Consumer Science, Guest Teacher</h3>
                         <div class="subheading mb-3">St Vrain Valley School District</div>
                         <p>
-                        <ul>
-                            <list-style-image: url: https://fontawesome.com/icons/book-open-reader?f=classic&s=solid>
-                            <li>Instructed, tutored, and mentored whole class and individual students across grades 9-12.</li>
-                            <li>Fulfilled circulation duties using Follett Destiny to renew, check-in, check-out, and loan books.</li>
-                            <li>Facilitated literature circles to encourage reading stamina, enjoyment, and comprehension skills.</li>
-                            <li>Instructed students in researching techniques including accessing databases, utilizing boolean terms, and keywords.</li>
-                            <li>Completed shelving duties including fronting texts and shelf reading.</li>
-                            <li>Completed documentation of attendance, grades, and other required details.</li>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                Instructed, tutored, and mentored whole class and individual students across grades 9-12.</li>
+                            <li>
+                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                Fulfilled circulation duties using Follett Destiny to renew, check-in, check-out, and loan books.</li>
+                            <li>
+                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                Facilitated literature circles to encourage reading stamina, enjoyment, and comprehension skills.</li>
+                            <li>
+                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                Instructed students in researching techniques including accessing databases, utilizing boolean terms, and keywords.</li>
+                            <li>
+                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                Completed shelving duties including fronting texts and shelf reading.</li>
+                            <li>
+                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                Completed documentation of attendance, grades, and other required details.</li>
                         </ul> </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">October 2021 - Present</span></div>
@@ -255,6 +267,8 @@
                 </ul>
             </div>
         </section>
+        <hr class="m-0" />
+        <!--Youtube Videos-->
             <section class="resume section" id="videos">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Videos</h2>
