--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
                         <p>
                         <ul class="fa-ul mb-0">
                             <li>
-                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                <span class="fa-li"><i class="fa-solid fa-book"></i></span>
                                 Instructed, tutored, and mentored whole class and individual students across grades 9-12.</li>
                             <li>
-                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                <span class="fa-li"><i class="fa-solid fa-book"></i></span>
                                 Fulfilled circulation duties using Follett Destiny to renew, check-in, check-out, and loan books.</li>
                             <li>
-                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                <span class="fa-li"><i class="fa-solid fa-book"></i></span>
                                 Facilitated literature circles to encourage reading stamina, enjoyment, and comprehension skills.</li>
                             <li>
-                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                <span class="fa-li"><i class="fa-solid fa-book"></i></span>
                                 Instructed students in researching techniques including accessing databases, utilizing boolean terms, and keywords.</li>
                             <li>
-                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                <span class="fa-li"><i class="fa-solid fa-book"></i></span>
                                 Completed shelving duties including fronting texts and shelf reading.</li>
                             <li>
-                                <span class="fa-solid"><i class="fas fa-book"></i></span>
+                                <span class="fa-li"><i class="fa-solid fa-book"></i></span>
                                 Completed documentation of attendance, grades, and other required details.</li>
                         </ul> </p>
                     </div>
