--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#videos">Videos</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#videos">Video</a></li>
             </ul>
         </div>
     </nav>
@@ -269,9 +269,11 @@
         </section>
         <hr class="m-0" />
         <!--Youtube Videos-->
-            <section class="resume section" id="videos">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Videos</h2>
+        <section class="resume section" id="video">
+              <div class="resume-section-content">
+                    <h2 class="mb-5">Video</h2>
+                    <!--Youtube Embed Code-->
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/WIe5snaMJZw?si=XyUyz4xQq-3o4ZXq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
