modified:   index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
+                </li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#videos">Video</a></li>
             </ul>
         </div>
@@ -59,7 +60,7 @@
                 <p class="lead mb-5">I am a seasoned educator who plans to take experiences learned from teaching to
                     provide effective, literacy-building services to children and young adults through public
                     libraries. </p>
-          <!--Replaced old icons with website building and YT icons-->
+                <!--Replaced old icons with website building and YT icons-->
                 <div class="social-icons">
                     <a class="social-icon" href="#!"><i class="fab fa-drupal"></i></a>
                     <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -81,23 +82,34 @@
                         <ul class="fa-ul mb-0">
                             <li>
                                 <span class="fa-li"><i class="fa-solid fa-book"></i></span>
-                                Instructed, tutored, and mentored whole class and individual students across grades 9-12.</li>
+                                Instructed, tutored, and mentored whole class and individual students across grades
+                                9-12.
+                            </li>
                             <li>
                                 <span class="fa-li"><i class="fa-solid fa-book"></i></span>
-                                Fulfilled circulation duties using Follett Destiny to renew, check-in, check-out, and loan books.</li>
+                                Fulfilled circulation duties using Follett Destiny to renew, check-in, check-out, and
+                                loan books.
+                            </li>
                             <li>
                                 <span class="fa-li"><i class="fa-solid fa-book"></i></span>
-                                Facilitated literature circles to encourage reading stamina, enjoyment, and comprehension skills.</li>
+                                Facilitated literature circles to encourage reading stamina, enjoyment, and
+                                comprehension skills.
+                            </li>
                             <li>
                                 <span class="fa-li"><i class="fa-solid fa-book"></i></span>
-                                Instructed students in researching techniques including accessing databases, utilizing boolean terms, and keywords.</li>
+                                Instructed students in researching techniques including accessing databases, utilizing
+                                boolean terms, and keywords.
+                            </li>
                             <li>
                                 <span class="fa-li"><i class="fa-solid fa-book"></i></span>
-                                Completed shelving duties including fronting texts and shelf reading.</li>
+                                Completed shelving duties including fronting texts and shelf reading.
+                            </li>
                             <li>
                                 <span class="fa-li"><i class="fa-solid fa-book"></i></span>
-                                Completed documentation of attendance, grades, and other required details.</li>
-                        </ul> </p>
+                                Completed documentation of attendance, grades, and other required details.
+                            </li>
+                        </ul>
+                        </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">October 2021 - Present</span></div>
                 </div>
@@ -107,10 +119,14 @@
                         <div class="subheading mb-3">Angevine Middle School</div>
                         <p>
                         <ul>
-                        <li>Taught full time for standard/support facilitated, advanced, and pre-IB eighth grade language arts classes.</li> 
-                        <li>Maintained classroom library and records regarding checked out and returned books.</li>
-                        <li>Updated students’ individual learning and reading plans by collecting and analyzing data, communicating with parents and interventionists, and implementing learning and reading supports with data checks.</li>
-                        <li>Adapted teaching methods and materials to meet students' varying needs and cultural backgrounds.</li>
+                            <li>Taught full time for standard/support facilitated, advanced, and pre-IB eighth grade
+                                language arts classes.</li>
+                            <li>Maintained classroom library and records regarding checked out and returned books.</li>
+                            <li>Updated students’ individual learning and reading plans by collecting and analyzing
+                                data, communicating with parents and interventionists, and implementing learning and
+                                reading supports with data checks.</li>
+                            <li>Adapted teaching methods and materials to meet students' varying needs and cultural
+                                backgrounds.</li>
                         </ul>
                         </p>
                     </div>
@@ -125,8 +141,10 @@
                             <li>Taught full time for grade 7 mainstream and advanced Language Arts remotely.</li>
                             <li>Lead technological professional development on online learning platform Nearpod.</li>
                             <li>Curated and promoted a virtual classroom library to students aged 13-14.</li>
-                            <li>Utilized information management systems to organize and present class materials to students.</li>
-                            <li>Incorporated technology such as FlipGrid and Nearpod into lessons for scaffolding, collaboration, and enhancing student learning.</li>
+                            <li>Utilized information management systems to organize and present class materials to
+                                students.</li>
+                            <li>Incorporated technology such as FlipGrid and Nearpod into lessons for scaffolding,
+                                collaboration, and enhancing student learning.</li>
                         </ul>
                         </p>
                     </div>
@@ -138,9 +156,12 @@
                         <div class="subheading mb-3">Abraham Lincoln High School</div>
                         <p>
                         <ul>
-                            <li>Taught full time for grades 9-11th honors, mainstream, and co-taught English and English Language Development classes.</li>
-                            <li>Implemented the Sheltered Instruction Observational Protocal Model to help English Language Learner students develop their English skills.</li>
-                            <li>Co-created the ninth grade unit four unit curriculum for the 2019-2020 school year for the district.</li>
+                            <li>Taught full time for grades 9-11th honors, mainstream, and co-taught English and English
+                                Language Development classes.</li>
+                            <li>Implemented the Sheltered Instruction Observational Protocal Model to help English
+                                Language Learner students develop their English skills.</li>
+                            <li>Co-created the ninth grade unit four unit curriculum for the 2019-2020 school year for
+                                the district.</li>
                             <li>Collected and implemented student data to drive instruction.</li>
                         </ul>
                         </p>
@@ -180,6 +201,18 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">Skills</h2>
                 <div class="subheading mb-3">Programming Languages & Tools</div>
+                <ul class="fa-ul mb-0">
+                    <li>Collection development & evaluation</li>
+                    <li>Information literacy instruction</li>
+                    <li>Community Engagement and Outreach</li>
+                    <li>Program development for youth</li>
+                    <li>Readers advisory and research assistance</li>
+                    <li>Technological proficiency and library management systems</li>
+                    <li>Strong collaboration and interpersonal skills</li>
+                    <li>Customer service and user support</li>
+                </ul>
+                <!--Skills I hope to have in the future or in progress-->
+                <!-- <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="list-inline dev-icons">
                     <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                     <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -187,8 +220,8 @@
                     <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                 </ul>
                 <div class="subheading mb-3">Workflow</div>
-                <ul class="fa-ul mb-0">
-                    <li>
+                <ul class="fa-ul mb-0"> -->
+                    <!-- <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         Mobile-First, Responsive Design
                     </li>
@@ -203,7 +236,7 @@
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         Agile Development & Scrum
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </section>
@@ -212,12 +245,13 @@
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid
-                    skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking,
-                    free climbing, and kayaking.</p>
-                <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television
-                    shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest
-                    technology advancements in the front-end web development world.</p>
+                <p> I spend the majority of my free time creating. Having 10+ years of self-taught sewing experience, I
+                    make my own clothes as well as occasional matching outfits for my cats. I also crochet and knit
+                    anything from scarves and hats to amigurumi, usually with a Youtube video about lost media in the
+                    background. Besides my "old lady" crafts, I've been known to create my own poems and stories.</p>
+                <p class="mb-0">When the weather allows, I try to get outdoors to appreciate nature as much as possible.
+                    Whether it's hiking with my husband; going on walks in the neighborhood; or gardening, I love
+                    getting to experience the beauty of Colorado however possible.</p>
             </div>
         </section>
         <hr class="m-0" />
@@ -270,15 +304,18 @@
         <hr class="m-0" />
         <!--Youtube Videos-->
         <section class="resume section" id="video">
-              <div class="resume-section-content">
-                    <h2 class="mb-5">Video</h2>
-                    <!--Youtube Embed Code-->
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/WIe5snaMJZw?si=XyUyz4xQq-3o4ZXq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+            <div class="resume-section-content">
+                <h2 class="mb-5">Video</h2>
+                <!--Youtube Embed Code-->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/WIe5snaMJZw?si=XyUyz4xQq-3o4ZXq"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <!-- Bootstrap core JS-->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+            <!-- Core theme JS-->
+            <script src="js/scripts.js"></script>
 </body>
 
 </html>
