--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
                 </li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#videos">Video</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#video">Video</a></li>
             </ul>
         </div>
     </nav>
@@ -200,8 +200,8 @@
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
                 <h2 class="mb-5">Skills</h2>
-                <div class="subheading mb-3">Programming Languages & Tools</div>
-                <ul class="fa-ul mb-0">
+                <div class="subheading mb-3">Professional Skills</div>
+                <ul>
                     <li>Collection development & evaluation</li>
                     <li>Information literacy instruction</li>
                     <li>Community Engagement and Outreach</li>
@@ -221,7 +221,7 @@
                 </ul>
                 <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0"> -->
-                    <!-- <li>
+                <!-- <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         Mobile-First, Responsive Design
                     </li>
@@ -252,65 +252,40 @@
                 <p class="mb-0">When the weather allows, I try to get outdoors to appreciate nature as much as possible.
                     Whether it's hiking with my husband; going on walks in the neighborhood; or gardening, I love
                     getting to experience the beauty of Colorado however possible.</p>
+                <img src=""
             </div>
         </section>
         <hr class="m-0" />
-        <!-- Certifications-->
-        <section class="resume-section" id="awards">
+        <!-- Ed Certifications-->
+        <section class="resume-section" id="certifications">
             <div class="resume-section-content">
                 <h2 class="mb-5">Certifications</h2>
                 <ul class="fa-ul mb-0">
                     <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Google Analytics Certified Developer
+                        <span class="fa-li"><i class="fa-solid fa-book-open-reader"></i></span>
+                        Florida Secondary Education Certification (Type 09) in English; received June 2017.
+                        Secondary Education Endorsement in ESOL.
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Mobile Web Specialist - Google Certification
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        2
-                        <sup>nd</sup>
-                        Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Place - James Buchanan High School - Hackathon 2006
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        3
-                        <sup>rd</sup>
-                        Place - James Buchanan High School - Hackathon 2005
+                        <span class="fa-li"><i class="fa-solid fa-book-open-reader"></i></span>
+                            Colorado Secondary Education Certification in English Grades 7-12 and Family and Consumer
+                            Sciences; received August 2017, July 2020; renewed January 2020.
+                        ELA-E Certified August 2021.
                     </li>
                 </ul>
             </div>
         </section>
         <hr class="m-0" />
-        <!--Youtube Videos-->
-        <section class="resume section" id="video">
+        <!-- Youtube Video-->
+        <section class="resume-section" id="video">
             <div class="resume-section-content">
                 <h2 class="mb-5">Video</h2>
-                <!--Youtube Embed Code-->
+                 <!--Youtube Embed Code-->
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/WIe5snaMJZw?si=XyUyz4xQq-3o4ZXq"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
             </div>
             <!-- Bootstrap core JS-->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
