--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Savanna Poulson</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
-                    src="Assets/IMG/profile.jpg" alt="..." /></span>
+                    src="Assets/IMG/profile.jpg" alt="woman with brown hair smiling" /></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -252,6 +252,7 @@
                 <p class="mb-0">When the weather allows, I try to get outdoors to appreciate nature as much as possible.
                     Whether it's hiking with my husband; going on walks in the neighborhood; or gardening, I love
                     getting to experience the beauty of Colorado however possible.</p>
+                <img src="Assets/IMG/garden (1).jpg" width="400" length="400" alt="garden plot with green plants and orange and white flowers">
             </div>
         </section>
         <hr class="m-0" />
